src/objects/Access_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>DT_Format__c</fullName>
        <label>DT Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>getAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>getLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access Leads</label>
        <type>Checkbox</type>
    </fields>
    <label>Access Settings</label>
</CustomObject>